--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="email">Email</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="no_record_message">No record</string>
 </resources>
